[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scenes/GreyMask.tscn" type="PackedScene" id=1]
[ext_resource path="res://UI/PixelRPG.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Scenes/DeathMenu/DeathMenu.gd" type="Script" id=3]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="DynamicFont" id=3]
size = 18
outline_size = 2
outline_color = Color( 1, 0.384314, 0.384314, 1 )
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="DynamicFont" id=5]
size = 12
outline_size = 2
outline_color = Color( 0.12549, 0.12549, 0.12549, 1 )
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="DynamicFont" id=7]
size = 12
outline_size = 2
outline_color = Color( 0.12549, 0.12549, 0.12549, 1 )
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=8]
tracks/0/type = "value"
tracks/0/path = NodePath("GreyMask:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("GreyMask:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.2, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Panel:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Panel:rect_scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.2, 1 ),
"update": 0,
"values": [ Vector2( 0, 1 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=9]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("GreyMask:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Panel:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="DeathMenu" type="Node"]
script = ExtResource( 3 )

[node name="GreyMask" parent="." instance=ExtResource( 1 )]
modulate = Color( 1, 1, 1, 0 )

[node name="Panel" type="Panel" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -75.0
margin_top = -100.0
margin_right = 75.0
margin_bottom = 100.0
rect_scale = Vector2( 1e-05, 1 )
rect_pivot_offset = Vector2( 75, 100 )
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOverMessage" type="RichTextLabel" parent="Panel"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -90.0
custom_styles/normal = SubResource( 2 )
custom_fonts/normal_font = SubResource( 3 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
bbcode_enabled = true
bbcode_text = "

[center] You [tornado radius=3 freq=3]died[/tornado] [/center]"
text = "

 You died "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HighscoreLabel" type="RichTextLabel" parent="Panel"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -32.9306
margin_bottom = 11.0694
custom_styles/normal = SubResource( 4 )
custom_fonts/normal_font = SubResource( 5 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
bbcode_enabled = true
bbcode_text = "
[center]Highscore: 0[/center]
"
text = "
Highscore: 0
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabel" type="RichTextLabel" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -89.4013
margin_top = -10.4202
margin_right = 90.5987
margin_bottom = 29.5798
custom_styles/normal = SubResource( 6 )
custom_fonts/normal_font = SubResource( 7 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
bbcode_enabled = true
bbcode_text = "
[center]Score: 0[/center]"
text = "
Score: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RestartButton" type="Button" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -52.5987
margin_top = 57.542
margin_right = 52.4013
margin_bottom = 85.542
text = "Again!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "disappear"
anims/appear = SubResource( 8 )
anims/disappear = SubResource( 9 )
[connection signal="pressed" from="Panel/RestartButton" to="." method="_on_RestartButton_pressed"]
